[package]
name = "evl-sys"
description = """
Raw FFI bindings to the Xenomai4 'libevl' C interface.
"""
edition = "2018"
version = "0.20.3"
license-file = "LICENSE"
authors = ["Philippe Gerum <rpm@xenomai.org>"]
homepage = "https://evlproject.org"
repository = "https://git.xenomai.org/xenomai4/evl-sys.git"
links = "evl"

[dependencies]
bitflags = "~1.3.2"
libc = "~0.2.125"

[build-dependencies]
bindgen = "0.59.2"
